<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CollectionViewer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CollectionViewer</string>
    <string name="title_activity_display_item">View</string>
    <string name="image_content">Image Content</string>
    <string name="menu_previous_element">Previous</string>
    <string name="menu_next_element">Next</string>
    <string name="menu_details_element">Details</string>
    <string name="menu_open_collection">Open Collection</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="_1_1">1/1</string>
    <string name="about_collection">About Collection</string>
    <string name="version">Version</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="scrollbar_position">Scrollbar position</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="image_not_found">Image not found !</string>
    <string name="path">Path = </string>
    <string name="details">Details</string>
    <string name="list_position">List position = </string>
    <string name="element_not_found">Element not found !</string>
    <string name="view">View</string>
    <string name="warning_points">Warning :</string>
    <string name="warning_permission">Permission is mandatory so application will close !</string>
    <string name="appli_version">Name : %1$s\nVersion : %2$s\nDate : %3$s</string>
    <string name="name">Name</string>
    <string name="not_available">Not available</string>
    <string name="description">Description</string>
    <string name="number_of_items">Number of items</string>
    <string name="available_collections">Available collections</string>
    <string name="close">Close</string>
    <string name="settings_saved">Settings saved !</string>
    <string name="clear_done">Clear done !</string>
    <string name="collections_root_location">Collections Root Location</string>
    <string name="default_root_location">Default Location</string>
    <string name="hide_sample_collection">Hide sample collection</string>
    <string name="lorem_ipsum1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_ipsum2">Eum perferendis quae et reprehenderit error id accusantium delectus et velit quos vel minus cumque. Aut sequi dolorem a inventore laudantium et illum omnis est mollitia magnam sed totam quibusdam est dignissimos itaque.</string>
    <string name="lorem_ipsum3">Sed officia minus qui ullam quo quisquam omnis in unde quisquam et provident mollitia ad harum architecto. Ea odit repudiandae cum officia dolore et corporis reiciendis.</string>
    <string name="lorem_ipsum4">Quo facere dolores aut consequatur quia ut laboriosam quibusdam ut nostrum dolor ut galisum praesentium! Sit impedit itaque et quia sunt ea sint ducimus a similique iusto.</string>
    <string name="words_to_search">Words to search comma separated</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_item_found">No item was found with those criteria</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="found_items">Found %1$d items</string>
    <string name="search_in_collection">Search in collection</string>
    <string name="choose_font_size">Font size for item description</string>
    <string name="small">small</string>
    <string name="normal">normal</string>
    <string name="big">big</string>
    <string name="very_big">very big</string>
    <string name="number_slash_number">%1$d/%2$d</string>
    <string name="title_activity_collection_details">Collection details</string>
    <string name="properties_list">Properties list</string>
    <string name="open_folder">Choose folder</string>
    <string name="reset_folder">Reset folder</string>
    <string name="zoom">Zoom</string>
    <string name="modify">Modify</string>
    <string name="informations">Informations</string>
    <string name="successfully_saved">Collection saved !</string>
    <string name="problem_during_save">There was a problem during save !</string>
    <string name="property_name">Property name</string>
    <string name="cancel">Cancel</string>
    <string name="property_description">Property description</string>
    <string name="add">Add</string>
    <string name="add_image">Add image</string>
    <string name="delete_image">Delete image</string>
    <string name="open_properties">Open properties</string>
    <string name="close_properties">Close properties</string>
    <string name="collection_name">Collection name</string>
    <string name="new_collection">New Collection</string>
    <string name="new_property">New Property</string>
    <string name="message_new_collection">A new collection will be created with the given name. You will have to fill its description, create properties and add items !</string>
    <string name="collection_successfully_created">Collection successfully created</string>
    <string name="menu_collection">Collection Menu</string>
    <string name="delete">Delete</string>
    <string name="title_activity_collection_modify">Modify collection</string>
    <string name="collection_deletion_successful">Collection successfully deleted</string>
    <string name="deletion_error">An error occurred during deletion !</string>
    <string name="collection_creation_error">An error occurred during creation !</string>
    <string name="warning_collection_deletion">Do you really want to delete this collection ?</string>
    <string name="warning">Warning</string>
    <string name="title_activity_modify_item">Modify</string>
    <string name="item_successfully_saved">Changes successfully saved</string>
    <string name="item_error_save">An error occurred during save !</string>
    <string name="images">Images</string>
    <string name="properties">Properties</string>
    <string name="add_item">Add item</string>
    <string name="warning_item_deletion">Do you really want to delete this item ?</string>
    <string name="collection_is_empty">Collection is empty !</string>
    <string name="no_image_to_display">No image to display !</string>
    <string name="collection_modify">Modify collection</string>
    <string name="no_properties_to_display">No properties to display !</string>
    <string name="to_be_completed">To be completed</string>
    <string name="new_item">New item</string>
    <string name="message_new_item">A new item will be created with the given name. You will have to fill its properties and add images !</string>
    <string name="message_new_property">A new property will be created with the given name. You will have to fill its description and optionally complete this property for existing items !</string>
    <string name="content">Content</string>
    <string name="warning_image_deletion">Do you really want to delete this image ?</string>
    <string name="must_not_be_empty">Must not be empty !</string>
    <string name="must_contains_alphabet">Can only contains alphabet characters and dashes</string>
    <string name="image_deletion_successful">Image successfully deleted</string>
    <string name="item_deletion_successful">Item successfully deleted</string>
    <string name="help">Help</string>
    <string name="hide_help_button">Hide help button</string>
    <string name="reduce_images_button">Reduce size of images</string>
    <string name="collection_loaded">Collection \'%1$s\' loaded</string>
    <string name="help_description">Help</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="add_property">Add property</string>
</resources>