<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/close_btn"
        android:icon="@drawable/action_close"
        android:showAsAction="ifRoom"
        android:title="@string/close" />
    <item
        android:id="@+id/search_btn"
        android:icon="@drawable/action_search"
        android:showAsAction="ifRoom"
        android:title="@string/search" />
    <item
        android:id="@+id/add_btn"
        android:icon="@drawable/action_add2"
        android:showAsAction="ifRoom"
        android:title="@string/add_item" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/action_about"
        android:showAsAction="ifRoom"
        android:title="@string/details" />
</menu>
