<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ModifyItem">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:text="@string/images"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="5dp"
                android:text="@string/_1_1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/image_content"
            android:onClick="showNextImage" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/dark_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonZoom"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/zoom"
                android:onClick="zoomImage"
                android:src="@drawable/action_add_black" />

            <ImageButton
                android:id="@+id/buttonAdd"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/open_folder"
                android:onClick="addImage"
                android:src="@drawable/action_add_black" />

            <ImageButton
                android:id="@+id/buttonDelete"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/open_folder"
                android:onClick="deleteImage"
                android:src="@drawable/action_delete_black" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_blue"
            android:padding="9dp"
            android:text="@string/content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
