<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.avlweb.collectionviewer.ui.ItemDisplay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myclayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:padding="5dp"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/image_not_found"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/imageView1"
            app:layout_constraintEnd_toEndOf="@id/imageView1"
            app:layout_constraintStart_toStartOf="@id/imageView1"
            app:layout_constraintTop_toTopOf="@id/imageView1" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/circle"
        android:padding="5dp"
        android:text="@string/_1_1"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="4dp"
        android:background="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myclayout" />

    <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/properties"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <TextView
        android:id="@+id/textViewDetails2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDetails"
        tools:text="@string/lorem_ipsum1"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/buttonBottom"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/open_folder"
        android:onClick="openDetails"
        android:src="@drawable/navigation_bottom_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <ImageButton
        android:id="@+id/buttonPrevious"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/open_folder"
        android:onClick="openDetails"
        android:src="@drawable/navigation_previous_black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="4dp"
        android:background="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDetails2" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:fadeScrollbars="false"
        android:fastScrollAlwaysVisible="true"
        android:fastScrollEnabled="false"
        android:scrollbarStyle="outsideInset"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/to_be_completed"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:text="@string/lorem_ipsum2" />

    </ScrollView>

    <ImageButton
        android:id="@+id/fab"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/help_description"
        android:onClick="openHelp"
        android:src="@drawable/action_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
