<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.avlweb.collectionviewer.ui.CollectionDetails">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/lorem_ipsum"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/lorem_ipsum"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:text="@string/version"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/lorem_ipsum"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:text="@string/number_of_items"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textNbItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/lorem_ipsum"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:text="@string/properties_list"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/no_properties_to_display"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <ListView
        android:id="@+id/propertiesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/dark_blue"
        android:dividerHeight="1dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</LinearLayout>
